--- a/index.html
+++ b/index.html
@@ -48,7 +48,24 @@
       </div>
     </div>
   </header>
-  <main></main>
+
+  <main>
+
+    <section class="teams-section">
+      <div class="teams-images">
+        <img src="images/team1.png" alt="">
+        <img src="images/team2.png" alt="">
+        <img src="images/team3.png" alt="">
+        <img src="images/team4.png" alt="">
+      </div>
+      <div class="teams-content">
+        <h1> <span class="gray">Quick list</span> of Our <span class="orange">Features</span></h1>
+        <p class="primary-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form,
+        by injected humour, or randomised words which don't look even</p>
+        <button class="primary-btn">Explore More</button>
+      </div>
+    </section>
+  </main>
   <footer></footer>
 </body>
 
