finished facts section successfully

--- a/index.html
+++ b/index.html
@@ -59,10 +59,41 @@
         <img src="images/team4.png" alt="">
       </div>
       <div class="teams-content">
-        <h1> <span class="gray">Quick list</span> of Our <span class="orange">Features</span></h1>
+        <h1 class="section-title"> <span class="gray">Quick list</span> of Our <span class="orange">Features</span></h1>
         <p class="primary-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form,
         by injected humour, or randomised words which don't look even</p>
         <button class="primary-btn">Explore More</button>
+      </div>
+    </section>
+
+    <section class="feature-section">
+
+    </section>
+
+    <section class="facts-section">
+      <h1 class="section-title">Some Facts</h1>
+      <p class="primary-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+      <div class="achievements">
+        <div class="achievements-container">
+          <img src="images/icons/ribon.png" alt="">
+          <h2>54</h2>
+          <p>Awards Winnings</p>
+        </div>
+        <div class="achievements-container">
+          <img src="images/icons/projects.png" alt="">
+          <h2>1458</h2>
+          <p>Project Finished</p>
+        </div>
+        <div class="achievements-container">
+          <img src="images/icons/customers.png" alt="">
+          <h2>590</h2>
+          <p>Clients Worked</p>
+        </div>
+        <div class="achievements-container">
+          <img src="images/icons/email.png" alt="">
+          <h2>22578</h2>
+          <p>Email Send</p>
+        </div>
       </div>
     </section>
   </main>
