--- a/index.html
+++ b/index.html
@@ -96,6 +96,21 @@
         </div>
       </div>
     </section>
+
+    <section class="sponsor-section">
+      <div class="sponsor-content">
+        <h1 class="section-title">Our Sponspors</h1>
+        <p class="primay-description">There are many variations of passages of Lorem Ipsum available, but the majority have
+          suffered alteration.</p>
+      </div>
+      <div class="sponsor-images">
+        <img src="images/sponsors/spotify.png" alt="">
+        <img src="images/sponsors/google.png" alt="">
+        <img src="images/sponsors/amazon.png" alt="">
+        <img src="images/sponsors/telerama.png" alt="">
+        <img src="images/sponsors/figma.png" alt="">
+      </div>
+    </section>
   </main>
   <footer></footer>
 </body>
