--- a/index.html
+++ b/index.html
@@ -112,7 +112,9 @@
       </div>
     </section>
   </main>
-  <footer></footer>
+  <footer>
+    <p class="primary-description">All rights reserved copyright@2023 startup landing page design</p>
+  </footer>
 </body>
 
 </html>
