--- a/index.html
+++ b/index.html
@@ -67,6 +67,44 @@
     </section>
 
     <section class="feature-section">
+      <div class="feature-content">
+        <h1 class="section-title">Features you will <br> love & enjoy</h1>
+        <p class="primay-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form,
+        by injected humour, or randomised words which don't look even</p>
+        <div class="card-section">
+          <div class="card">
+            <h2 class="card-title">Dexktop & Mobile Version</h2>
+            <p class="primary-description">There are many variations of passages of Lorem Ipsum available, but the majority have
+              suffered alteration in some form,
+              by injected humour, or randomised...........</p>
+          </div>
+          <div class="card">
+            <h2 class="card-title">Drag & Drop Builder</h2>
+            <p class="primary-description">There are many variations of passages of Lorem Ipsum available, but the majority have
+              suffered alteration in some form,
+              by injected humour, or randomised...........</p>
+          </div>
+          <div class="card">
+            <h2 class="card-title">Awesome Modern Design</h2>
+            <p class="primary-description">There are many variations of passages of Lorem Ipsum available, but the majority have
+              suffered alteration in some form,
+              by injected humour, or randomised...........</p>
+          </div>
+          <div class="card">
+            <h2 class="card-title">Super Easy to Edit</h2>
+            <p class="primary-description">There are many variations of passages of Lorem Ipsum available, but the majority have
+              suffered alteration in some form,
+              by injected humour, or randomised...........</p>
+          </div>
+          </div>
+        </div>
+      <div class="feature-images">
+        <img src="images/architect.png" alt="">
+        <div class="ten-years-badge">
+          <h2>10+Year</h2>
+          <p>Experience</p>
+        </div>
+      </div>
 
     </section>
 
